ignored some UserserviceTest methods